# Kronos-API

./: CMakeLists.txt  Config.cmake.in  Kronos-API.bat  LICENSE  README.md  build.bat  configure.bat  create.bat  install.bat  package.bat
base/: header_public.hpp
cache/: cache.cmake
include/: test.hpp
install/include/KronosAPI/: test.hpp
install/lib/cmake/KronosAPI/: KronosAPIConfig.cmake  KronosAPITargets-noconfig.cmake  KronosAPITargets-release.cmake
src/: test.cpp
